<resources>
    <string name="app_name">Dawggit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dawggit_logo">Dawggit Logo</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Forum</string>
    <string name="tab_text_3">Listings</string>
    <string name="tab_text_4">Review</string>
    <string name="tab_text_5">Settings</string>
    <string name="home_text">Welcome to the Home Page</string>
    <string name="home_text_2">Updates will be displayed here</string>
    <string name="add_post">New Post</string>
    <string name="forum">Forum Posts</string>
    <string name="post_title">Enter the Title of Your Post</string>
    <string name="text_content">Forum Body</string>
    <string name="post_reply">Reply</string>
    <string name="reviewHint">Leave a review</string>
    <string name="course_review">Course Reviews</string>
    <string name="addcommentButton">Add Comment</string>
    <string name="hintCommentBox">Leave a comment</string>
    <string name="addCourseReview">Add Course</string>
    <string name="hintCourseID">Enter the Course Code</string>
    <string name="hintCourseTitle">Enter the Title of the Course</string>
    <string name="hintCourseInfo">Enter the Course Information</string>
    <string name="Listings">Listings</string>
    <string name="add_listings">New Item</string>
    <string name="tv_fragment_listings_listings">Listings</string>
    <string name="listing_body_hint">Enter the description</string>
    <string name="listing_title">Enter the title of the item</string>
    <string name="price">Enter Price</string>
    <string name="listing_add_new">New Listing</string>
    <string name="button_exit">Exit this page</string>
    <string name="listing_image">Select an image</string>
    <string name="listing_detail_image">Listing Image</string>
    <string name="listing_detail_price">Price</string>
    <string name="listing_detail_date">Date</string>
    <string name="listing_detail_title_text">Title</string>
    <string name="listing_detail_body_text">Description</string>
    <string name="addReviewText">Add Review</string>
    <string name="viewReviews">View Reviews</string>
    <string name="listings_item_title">Title</string>
    <string name="listings_item_price">Price</string>
    <string name="listings_item_image_desc">Listings Image</string>
    <string name="listing_detail_image_desc">Uploaded Image</string>
    <string name="listings_add_date">Date</string>
    <string name="your_listings">Your Listings:</string>
    <string name="delete_post">Delete Post</string>
    <string name="deleteCourse">Delete Course</string>
</resources>
