<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_listing_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/uwGray">

        <TextView
            android:id="@+id/tv_fragment_listing_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/listings_item_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/uwPurple"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_fragment_listing_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/listings_item_price"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <ImageView
            android:id="@+id/imageView_fragment_listing_item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/listings_item_image_desc"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>